objects/TW1_Acoes__c.object
<CustomObject>
    <fields>
        <fullName>TW1_Acao_Concluida__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ação Concluída</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Area_sera_alterada__c</fullName>
        <label>Área será alterada?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Assunto__c</fullName>
        <label>Assunto</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Bem_sucedida__c</fullName>
        <label>Bem-sucedida?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TW1_Definir_Tratativa_Negocia_o__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Cancelado_Integracao__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelado Integração</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Cliente_Atendeu_Contato__c</fullName>
        <label>Cliente Atendeu Contato</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Cliente_Principal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente Principal</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ações</relationshipLabel>
        <relationshipName>Acoes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Cliente_Solicitou_Postergacao__c</fullName>
        <label>Cliente Solicitou Postergação?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Comentarios__c</fullName>
        <label>Comentários</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Conclusao__c</fullName>
        <label>Data de Conclusão</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Postergacao__c</fullName>
        <label>Data da Postergação</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Definir_Tratativa_Negocia_o__c</fullName>
        <label>Definir Tratativa Negociação</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TW1_Fase_Inadimplencia__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>TW1_Tratativa_Inadimplencia</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Descricao_Acao__c</fullName>
        <label>Descrição da Ação</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Enviar_Aprovacao_Diretoria__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enviar para Aprovação da Diretoria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Fase_Inadimplencia__c</fullName>
        <label>Fase da Inadimplencia</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amigável</fullName>
                </value>
                <value>
                    <fullName>Judicial</fullName>
                </value>
                <value>
                    <fullName>Extrajudicial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Inadimplencia__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Inadimplência</label>
        <referenceTo>TW1_Inadimplencia__c</referenceTo>
        <relationshipLabel>Ações</relationshipLabel>
        <relationshipName>TW1_Acoes_Inadimplencia</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Motivo_Cancelamento__c</fullName>
        <label>Motivo Cancelamento</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Necessita_Aprovacao_Gerencia__c</fullName>
        <label>Necessita Aprovação da Gerência?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TW1_Bem_sucedida__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Necessita_Aprovacao__c</fullName>
        <label>Necessita Aprovação</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TW1_Tratativa_Proposta__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Negociacao_Aprovada__c</fullName>
        <label>Negociação Aprovada?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Negociacao_Bem_Sucedida__c</fullName>
        <label>Negociação Bem-sucedida</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TW1_Tratativa_Proposta__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Nome_Unidade__c</fullName>
        <formula>TW1_Unidade__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nome da Unidade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Nova_Area_Responsavel__c</fullName>
        <label>Nova Área Responsável</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TW1_Area_sera_alterada__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amigável</fullName>
                </value>
                <value>
                    <fullName>Extrajudicial</fullName>
                </value>
                <value>
                    <fullName>Judicial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Pagamento_Realizado__c</fullName>
        <label>Pagamento Realizado</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Parcelas_serao_inclusas__c</fullName>
        <label>Parcelas serão inclusas?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Não iniciada</fullName>
                    <default>true</default>
                    <label>Não iniciada</label>
                </value>
                <value>
                    <fullName>Em andamento</fullName>
                </value>
                <value>
                    <fullName>Concluída</fullName>
                </value>
                <value>
                    <fullName>TW1_Cancelada</fullName>
                    <label>Cancelada</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Tratativa_Aprovacao__c</fullName>
        <label>Tratativa para Aprovação</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Tratativa_Proposta__c</fullName>
        <label>Tratativa Proposta</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TW1_Fase_Inadimplencia__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Quitação de Saldo na Inadimplência</fullName>
                </value>
                <value>
                    <fullName>Alienação Fiduciária</fullName>
                </value>
                <value>
                    <fullName>Cessão de Direitos</fullName>
                </value>
                <value>
                    <fullName>Permuta</fullName>
                </value>
                <value>
                    <fullName>Alteração de Vencimento</fullName>
                </value>
                <value>
                    <fullName>Rescisão</fullName>
                </value>
                <value>
                    <fullName>Rescisão com Venda Nova</fullName>
                </value>
                <value>
                    <fullName>Leilão/Retomada</fullName>
                </value>
                <value>
                    <fullName>Trocar Responsável</fullName>
                </value>
                <value>
                    <fullName>Contatar Cliente Novamente</fullName>
                </value>
                <value>
                    <fullName>Sinal em aberto</fullName>
                </value>
                <value>
                    <fullName>Inclusão das parcelas em atraso ao financiamento</fullName>
                </value>
                <value>
                    <fullName>Repasse</fullName>
                    <isActive>false</isActive>
                    <label>Repasse</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Unidade__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unidade</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Ações da Inadimplência</relationshipLabel>
        <relationshipName>TW1_Acoes_Unidade</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Venda_sera_reaberta__c</fullName>
        <label>Venda será reaberta?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Teste__c</fullName>
        <label>Teste</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Ações</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TW1_Assunto__c</columns>
        <columns>TW1_Cliente_Principal__c</columns>
        <columns>TW1_Inadimplencia__c</columns>
        <columns>TW1_Fase_Inadimplencia__c</columns>
        <columns>TW1_Status__c</columns>
        <columns>TW1_Nome_Unidade__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <listViews>
        <fullName>TW1_Fila_Despachante_TW1_Acoes</fullName>
        <columns>NAME</columns>
        <filterScope>Queue</filterScope>
        <label>Fila Despachante</label>
        <queue>TW1_Fila_Despachante</queue>
        <sharedTo>
            <role>Administrador</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TW1_Fila_Diretoria_Comercial_TW1_Acoes</fullName>
        <filterScope>Queue</filterScope>
        <label>Fila Diretoria Comercial</label>
        <queue>TW1_Fila_Diretoria_Comercial</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TW1_Fila_Diretoria_Financeira_TW1_Acoes</fullName>
        <filterScope>Queue</filterScope>
        <label>Fila Diretoria Financeira</label>
        <queue>TW1_Fila_Diretoria_Financeira</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TW1_Minhas_Acoes</fullName>
        <columns>NAME</columns>
        <columns>TW1_Assunto__c</columns>
        <columns>TW1_Cliente_Principal__c</columns>
        <columns>TW1_Inadimplencia__c</columns>
        <columns>TW1_Fase_Inadimplencia__c</columns>
        <columns>TW1_Status__c</columns>
        <columns>TW1_Nome_Unidade__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Mine</filterScope>
        <label>Minhas Ações</label>
    </listViews>
    <listViews>
        <fullName>Tw1_Fila_Analise_Credito_FInanciamento_TW1_Acoes</fullName>
        <columns>NAME</columns>
        <filterScope>Queue</filterScope>
        <label>Fila Análise de Crédito - Financiamento</label>
        <queue>Tw1_Fila_Analise_Credito_FInanciamento</queue>
        <sharedTo>
            <role>Administrador</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tw1_Fila_Analise_Financeira_Contratos_TW1_Acoes</fullName>
        <columns>NAME</columns>
        <filterScope>Queue</filterScope>
        <label>Fila Análise Financeira - Contratos</label>
        <queue>Tw1_Fila_Analise_Financeira_Contratos</queue>
        <sharedTo>
            <role>Administrador</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tw1_Fila_Analise_Juridica_Contratos_TW1_Acoes</fullName>
        <filterScope>Queue</filterScope>
        <label>Fila Analise Jurídica - Contratos</label>
        <queue>Tw1_Fila_Analise_Juridica_Contratos</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tw1_Fila_Cartorio_TW1_Acoes</fullName>
        <filterScope>Queue</filterScope>
        <label>Fila Cartório</label>
        <queue>Tw1_Fila_Cartorio</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tw1_Fila_Consultor_de_Atendimento_TW1_Acoes</fullName>
        <columns>NAME</columns>
        <filterScope>Queue</filterScope>
        <label>Fila Consultor de Atendimento - RC</label>
        <queue>Tw1_Fila_Consultor_de_Atendimento</queue>
        <sharedTo>
            <role>Administrador</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tw1_Fila_Consultor_de_Relacionamento_TW1_Acoes</fullName>
        <columns>NAME</columns>
        <filterScope>Queue</filterScope>
        <label>Fila Consultor de Relacionamento - RC</label>
        <queue>Tw1_Fila_Consultor_de_Relacionamento</queue>
        <sharedTo>
            <role>Administrador</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tw1_Fila_Contas_a_Receber_TW1_Acoes</fullName>
        <filterScope>Queue</filterScope>
        <label>Fila Contas a Receber - Financeiro</label>
        <queue>Tw1_Fila_Contas_a_Receber</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tw1_Fila_Contratos_Contrato_TW1_Acoes</fullName>
        <filterScope>Queue</filterScope>
        <label>Fila Contratos - Contrato</label>
        <queue>Tw1_Fila_Contratos_Contrato</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tw1_Fila_Coordenador_Financiamento_TW1_Acoes</fullName>
        <filterScope>Queue</filterScope>
        <label>Fila Coordenador - Financiamento</label>
        <queue>Tw1_Fila_Coordenador_Financiamento</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tw1_Fila_Diretor_Juridico_TW1_Acoes</fullName>
        <filterScope>Queue</filterScope>
        <label>Fila Diretor Juridico</label>
        <queue>Tw1_Fila_Diretor_Juridico</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>A-{YYYY}{MM}{0000}</displayFormat>
        <label>Nome de Ações</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ações</pluralLabel>
    <recordTypes>
        <fullName>TW1_Acao_Padrao</fullName>
        <active>true</active>
        <label>Ação Padrão</label>
    </recordTypes>
    <recordTypes>
        <fullName>TW1_Aguardar_Pagamento</fullName>
        <active>true</active>
        <label>Aguardar Pagamento</label>
    </recordTypes>
    <recordTypes>
        <fullName>TW1_Aguardar_Postergacao</fullName>
        <active>true</active>
        <label>Aguardar Postergação</label>
    </recordTypes>
    <recordTypes>
        <fullName>TW1_Analisar_Inadimplencia</fullName>
        <active>true</active>
        <label>Analisar Inadimplência</label>
    </recordTypes>
    <recordTypes>
        <fullName>TW1_Analisar_Inclusao_Parcelas_Financiamento</fullName>
        <active>true</active>
        <label>Analisar Inclusão Parcelas Financiamento</label>
    </recordTypes>
    <recordTypes>
        <fullName>TW1_Analisar_Negociacao</fullName>
        <active>true</active>
        <label>Analisar Negociação</label>
    </recordTypes>
    <recordTypes>
        <fullName>TW1_Analisar_Sinal_Aberto</fullName>
        <active>true</active>
        <label>Analisar Sinal Aberto</label>
    </recordTypes>
    <recordTypes>
        <fullName>TW1_Buscar_Contato_com_o_Cliente</fullName>
        <active>true</active>
        <label>Buscar Contato com o Cliente</label>
    </recordTypes>
    <recordTypes>
        <fullName>TW1_Definir_responsavel</fullName>
        <active>true</active>
        <label>Definir responsável</label>
    </recordTypes>
    <recordTypes>
        <fullName>TW1_Distratar_Unidade</fullName>
        <active>true</active>
        <label>Distratar Unidade</label>
    </recordTypes>
    <recordTypes>
        <fullName>TW1_Gerar_Boleto</fullName>
        <active>true</active>
        <label>Gerar Boleto</label>
    </recordTypes>
    <recordTypes>
        <fullName>TW1_Negociar_Inadimplencia</fullName>
        <active>true</active>
        <label>Negociar Inadimplência</label>
    </recordTypes>
    <recordTypes>
        <fullName>TW1_Notificar_Judicialmente</fullName>
        <active>true</active>
        <label>Notificar Judicialmente</label>
    </recordTypes>
    <recordTypes>
        <fullName>TW1_Realizar_Negociacao</fullName>
        <active>true</active>
        <label>Realizar Negociação</label>
    </recordTypes>
    <recordTypes>
        <fullName>TW1_Registrar_Tratativa</fullName>
        <active>true</active>
        <label>Registrar Tratativa</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ImpedirAlterarAcaoConcluida</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 $Profile.Name &lt;&gt; &quot;Administrador do sistema&quot;,
TW1_Acao_Concluida__c = True,
OR(
ISCHANGED(TW1_Area_sera_alterada__c),
ISCHANGED(TW1_Assunto__c),
ISCHANGED(TW1_Bem_sucedida__c),
ISCHANGED(TW1_Cliente_Atendeu_Contato__c),
ISCHANGED(TW1_Cliente_Principal__c),
ISCHANGED(TW1_Cliente_Solicitou_Postergacao__c),
ISCHANGED(TW1_Comentarios__c),
ISCHANGED(TW1_Data_Postergacao__c),
ISCHANGED(TW1_Data_Conclusao__c),
ISCHANGED(TW1_Definir_Tratativa_Negocia_o__c),
ISCHANGED(TW1_Descricao_Acao__c),
ISCHANGED(TW1_Enviar_Aprovacao_Diretoria__c),
ISCHANGED(TW1_Fase_Inadimplencia__c),
ISCHANGED(TW1_Inadimplencia__c),
ISCHANGED(TW1_Necessita_Aprovacao__c),
ISCHANGED(TW1_Necessita_Aprovacao_Gerencia__c),
ISCHANGED(TW1_Negociacao_Aprovada__c),
ISCHANGED(TW1_Negociacao_Bem_Sucedida__c),
ISCHANGED(TW1_Nome_Unidade__c),
ISCHANGED(TW1_Nova_Area_Responsavel__c),
ISCHANGED(TW1_Pagamento_Realizado__c),
ISCHANGED(TW1_Parcelas_serao_inclusas__c),
ISCHANGED(TW1_Status__c),
ISCHANGED(TW1_Tratativa_Proposta__c),
ISCHANGED(TW1_Unidade__c),
ISCHANGED(TW1_Venda_sera_reaberta__c)
)
)</errorConditionFormula>
        <errorMessage>Não é permitido alterar uma Ação já encerrada. Contate administrador do sistema.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ImpedirEncerrarAcaoInadimplenciaPausada</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
      NOT(ISBLANK(TW1_Inadimplencia__c)),
      ISPICKVAL(TW1_Inadimplencia__r.TW1_Etapa__c, &quot;Pausada&quot;),
      ISCHANGED(TW1_Status__c),
      ISPICKVAL(TW1_Status__c,&quot;Concluída&quot;)
   )</errorConditionFormula>
        <errorMessage>A Ação não pode ser encerrada enquanto a Inadimplência estiver Pausada.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ImpedirEncerrarNegociacaoSemTratativa</fullName>
        <active>true</active>
        <description>Impede que a Ação de Negociar Inadimplência seja encerrada sem a Definição da Tratativa.</description>
        <errorConditionFormula>AND (
        ISCHANGED( TW1_Status__c ),
        ISPICKVAL(TW1_Status__c, &quot;Concluída&quot;),
        ISBLANK( TEXT(TW1_Definir_Tratativa_Negocia_o__c) ),
        ISPICKVAL( TW1_Fase_Inadimplencia__c, &quot;Amigável&quot;)
    )</errorConditionFormula>
        <errorDisplayField>TW1_Definir_Tratativa_Negocia_o__c</errorDisplayField>
        <errorMessage>Antes de encerrar a Ação favor informar a Tratativa da Negociação.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ImpedirNecessitaAPDiretoria</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
      RecordType.DeveloperName = &quot;TW1_Analisar_Negociacao&quot;,
      ISPICKVAL( TW1_Fase_Inadimplencia__c, &quot;Amigável&quot;),
      ISCHANGED( TW1_Negociacao_Aprovada__c ),
      ISPICKVAL(TW1_Negociacao_Aprovada__c, &quot;Não&quot;),
      ISPICKVAL( TW1_Necessita_Aprovacao__c, &quot;Sim&quot;)
    )</errorConditionFormula>
        <errorDisplayField>TW1_Necessita_Aprovacao__c</errorDisplayField>
        <errorMessage>Quando a negociação não for Aprovada, marcar o campo com a opção Não.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PreencherDataPostergacao</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
AND(
 RecordType.DeveloperName = &quot;TW1_Analisar_Inadimplencia&quot;,
 ISPICKVAL(TW1_Cliente_Solicitou_Postergacao__c,&quot;Sim&quot;),
 ISBLANK( TW1_Data_Postergacao__c )
),

AND(
 RecordType.DeveloperName = &quot;TW1_Analisar_Inadimplencia&quot;,
 ISPICKVAL(TW1_Cliente_Solicitou_Postergacao__c,&quot;Não&quot;),
 NOT(ISBLANK( TW1_Data_Postergacao__c ))
)
)</errorConditionFormula>
        <errorDisplayField>TW1_Data_Postergacao__c</errorDisplayField>
        <errorMessage>Se o cliente solicitou postergação favor informar a data da Postergação. Porém se o cliente não solicitou Postergação deixar o campo da Data de Postergação em branco.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PreencherMotivoCancelamento</fullName>
        <active>true</active>
        <errorConditionFormula>OR(

AND(
     ISCHANGED(TW1_Status__c),
     ISPICKVAL(TW1_Status__c, &quot;TW1_Cancelada&quot;),
     ISBLANK(TW1_Motivo_Cancelamento__c)
   ),

AND(
     NOT(ISPICKVAL(TW1_Status__c, &quot;TW1_Cancelada&quot;)),
     NOT(ISBLANK(TW1_Motivo_Cancelamento__c))
)
)</errorConditionFormula>
        <errorDisplayField>TW1_Motivo_Cancelamento__c</errorDisplayField>
        <errorMessage>Motivo do cancelamento deve ser preenchido se e somente se a ação for cancelada.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PreencherTratativaAprovacao</fullName>
        <active>true</active>
        <description>Se houver necessidade de aprovação na inadimplência, preencher tratativa para Aprovação.</description>
        <errorConditionFormula>AND(

 ISPICKVAL(TW1_Necessita_Aprovacao__c ,&quot;Sim&quot;),
ISPICKVAL(TW1_Status__c, &quot;Concluída&quot;),
 ISBLANK( TW1_Tratativa_Aprovacao__c )
)</errorConditionFormula>
        <errorDisplayField>TW1_Tratativa_Aprovacao__c</errorDisplayField>
        <errorMessage>Se houver a necessidade aprovação da diretoria, é necessário preencher a tratativa para aprovação.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SomenteProprietarioPodeEditarAcao</fullName>
        <active>true</active>
        <description>Somente o proprietário da Ação pode alterá-la.</description>
        <errorConditionFormula>AND( 
 NOT(ISNEW()),
 $Profile.Name &lt;&gt; &quot;Administrador do sistema&quot;, 
 OwnerId &lt;&gt;  $User.Id
)</errorConditionFormula>
        <errorMessage>Somente o proprietário poderá alterar a ação. Em caso de dúvidas, contate o Administrador do Sistema.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Teste</fullName>
        <active>true</active>
        <errorConditionFormula>AND(

ISNEW(),
 RecordType.DeveloperName = &quot;TW1_Buscar_Contato_com_o_Cliente&quot;,
ISPICKVAL( TW1_Inadimplencia__r.TW1_Fase__c ,&quot;Judicial&quot;)
, TW1_Inadimplencia__r.RecordType.DeveloperName = &quot;TW1_Judicial&quot;
)</errorConditionFormula>
        <errorMessage>Teste Marllon</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidacaoNegociarRescisao</fullName>
        <active>true</active>
        <description>Não permitir que uma negociação seja tratada como leilão ou Retomada se for Bem Sucedida, nem que uma tratativa seja dada como Malsucedida e seja tratada diferente de Leilão ou Retomada</description>
        <errorConditionFormula>OR(
 (AND(TEXT(TW1_Negociacao_Bem_Sucedida__c) = &quot;Sim&quot;,
 (OR(TEXT(TW1_Tratativa_Proposta__c ) = &quot;Leilão&quot;,
 TEXT(TW1_Tratativa_Proposta__c ) = &quot;Retomada&quot;)),
  TEXT(TW1_Status__c) = &quot;Concluída&quot;,
    RecordTypeId =  $Setup.TW1_Padroes_Inadimplencia__c.ID_Acao_Realizar_Negociacao__c  )),

 (AND(TEXT(TW1_Negociacao_Bem_Sucedida__c) = &quot;Não&quot;,
 (OR(TEXT(TW1_Tratativa_Proposta__c ) &lt;&gt; &quot;Leilão&quot;,
 TEXT(TW1_Tratativa_Proposta__c ) &lt;&gt; &quot;Retomada&quot;,
 TEXT(TW1_Tratativa_Proposta__c ) &lt;&gt; NULL)),
  TEXT(TW1_Status__c) = &quot;Concluída&quot;,
RecordTypeId =  $Setup.TW1_Padroes_Inadimplencia__c.ID_Acao_Realizar_Negociacao__c ))
)</errorConditionFormula>
        <errorMessage>As tratativas Leilão e Retomada só poderão ser utilizadas em caso de Negociação Malsucedida. As demais, só poderão ser utilizadas em caso de Negociação Bem-Sucedida.</errorMessage>
    </validationRules>
</CustomObject>